--- a/about.html
+++ b/about.html
@@ -85,66 +85,42 @@
                       <img src="images/icon-times-16.png" alt="">
                   </a>
                   <ul>
-                      <li>
-                        <a href="#">
-                          About Us
-                        </a>
-                        <ul>
-                          <li>
-                            <a href="about.html">
-                              Company Profile
-                            </a>
-                          </li>
-                          <li>
-                            <a href="vision-mission.html">
-                              Vision & Mission
-                            </a>
-                          </li>
-                          <li>
-                            <a href="bod.html">
-                              Board of Directors
-                            </a>
-                          </li>
-                        </ul>
-                      </li>
-                      <li>
-                        <a href="businesses.html">
-                          Our Businesses
-                        </a>
-                      </li>
-                      <li>
-                        <a href="projects.html">
-                          Our Projects
-                        </a>
-                      </li>
-                      <li>
-                        <a href="#">
-                          CSR
-                        </a>
-                        <ul>
-                          <li>
-                            <a href="csr.html">
-                             CSR Program
-                            </a>
-                          </li>
-                          <li>
-                            <a href="csr-activities.html">
-                              CSR Activities
-                            </a>
-                          </li>
-                        </ul>
-                      </li>
-                      <li>
-                        <a href="gallery.html">
-                          Gallery
-                        </a>
-                      </li>
-                      <li>
+                    <li>
+                      <a href="about.html">
+                        Tentang Kami
+                      </a>
+                    </li>
+                    <li>
+                      <a href="businesses.html">
+                        Bisnis Kami
+                      </a>
+                    </li>
+                    <li>
+                      <a href="projects.html">
+                        Proyek Kami
+                      </a>
+                    </li>
+                    <li>
+                      <a href="csr.html">
+                        CSR
+                      </a>
+                    </li>
+                    <li>
+                      <a href="gallery.html">
+                        Galeri
+                      </a>
+                    </li>
+                    <li>
+                      <a href="career.html">
+                        Karir
+                      </a>
+                    </li>
+                    <li>
                         <a href="contact.html">
-                          Contact Us
+                          Kontak Kami
                         </a>
-                      </li> 
-                    </ul>
+                      </li>
+                  </ul>
                     <hr class="my-5">
                     <div class="lang-ansaf">
                       <ul>
@@ -203,22 +179,22 @@
                   <h2 class="text-orange mb-lg-4">
                     Tentang Kami
                   </h2>
-                  <p class="text-white">
-                    Ansaf mulai masuk ke sektor pertambangan tahun 2011 melalui kegiatan jual beli batubara (coal trading).  Serangkaian<br>
-                    hambatan dan tantangan dalam proses tersebut mendorong Pendiri untuk masuk ke kegiatan langsung dalam<br>
-                    penambangan batubara.<br>
-                    <br>
-                    Tahun 2012 Ansaf mendapat kesempatan menjadi salah satu mining contractor di PT Insani Baraperkasa (IBP) di Kutai<br>
-                    Kartanegara. Ansaf mengelola kepercayaan ini dengan komitmen yang kuat sehingga mampu mencapai produktifitas<br>
-                    yang optimal, dibalik berbagai hambatan dan keterbatasan. <br>
-                    <br>
-                    Upaya tak kenal lelah dan kerja keras Ansaf membuahkan peluang baru sebagai mining contractor di perusahaan<br>
-                    tambang lainnya.  Pengalaman dari kegiatan penambangan ini memberi pelajaran kepada Ansaf tentang nilai-nilai<br>
-                    kejujuran (integrity) dan kesetiaan (loyalty) serta perlunya kehati-hatian (prudence) yang sejatinya hadir dalam <br>
-                    setiap kerjasama.<br>
-                    <br>
-                    Kini Ansaf siap mengembangkan perusahaan melalui penyempurnaan sistim, peningkatan kompetensi SDM dan<br>
-                    memperkuat peralatan produksi agar mampu beroperasi lebih produktif dan menghasilkan produksi yang optimal.<br>
+                  <p class="text-white w-80 text-justify visi-misi">
+                    Ansaf mulai masuk ke sektor pertambangan tahun 2011 melalui kegiatan jual beli batubara (coal trading).  Serangkaian
+                    hambatan dan tantangan dalam proses tersebut mendorong Pendiri untuk masuk ke kegiatan langsung dalam
+                    penambangan batubara.
+                    <br><br>
+                    Tahun 2012 Ansaf mendapat kesempatan menjadi salah satu mining contractor di PT Insani Baraperkasa (IBP) di Kutai
+                    Kartanegara. Ansaf mengelola kepercayaan ini dengan komitmen yang kuat sehingga mampu mencapai produktifitas
+                    yang optimal, dibalik berbagai hambatan dan keterbatasan. 
+                    <br><br>
+                    Upaya tak kenal lelah dan kerja keras Ansaf membuahkan peluang baru sebagai mining contractor di perusahaan
+                    tambang lainnya.  Pengalaman dari kegiatan penambangan ini memberi pelajaran kepada Ansaf tentang nilai-nilai
+                    kejujuran (integrity) dan kesetiaan (loyalty) serta perlunya kehati-hatian (prudence) yang sejatinya hadir dalam 
+                    setiap kerjasama.
+                    <br><br>
+                    Kini Ansaf siap mengembangkan perusahaan melalui penyempurnaan sistim, peningkatan kompetensi SDM dan
+                    memperkuat peralatan produksi agar mampu beroperasi lebih produktif dan menghasilkan produksi yang optimal.
                   </p>
                 </div>
                 <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">
@@ -295,10 +271,11 @@
                     
         </div>
       </div>
-    <div id="visi" class="container-fluid about-visi-content position-relative  bg-light-gray py-lg-5">
+    <div id="visi" class="container-fluid about-visi-content position-relative  bg-light-gray py-5">
       <img class="segitiga-biru" src="images/segitiga-biru-muda-kiri-12-02.png" alt="">
       <div class="row my-lg-5">
-        <div class="col-lg-8  pl-lg-5 offset-lg-3">
+        <div class="col-lg-3"></div>
+        <div class="col-lg-8 ml-lg-5 ml-4 my-lg-0 my-5 d-lg-block d-none">
           <h2 class="text-orange mb-lg-4">
             Visi
           </h2>
@@ -378,19 +355,108 @@
             </div>
           </div>
         </div>
+        <div class="col-lg-8 ml-lg-5 ml-4 my-lg-0 my-5 d-lg-none">
+          <h2 class="text-orange mb-lg-4">
+            Visi
+          </h2>
+          <p class="text-gray text-justify visi-desc">
+            Menjadi perusahaan tambang terintegrasi yang memiliki integritas, produktifitas, serta terpercaya yang mampu
+            berkembang secara berkesinambungan
+          </p>
+          <br><br>
+          <h2 class="text-orange">
+            Misi
+          </h2>
+          <p class="text-gray text-justify mb-5 misi-desc">
+            Menjadi perusahaan tambang terintegrasi yang memiliki integritas, produktifitas, serta terpercaya yang mampu berkembang secara berkesinambungan
+          </p>
+          <div class="carousel-mobile-visi owl-theme">
+            <div class="item">
+                <div class="row">
+                  <div class="col-lg-12">
+                    <img class="img-fluid w-50 mx-auto" src="images/about-visi-content-mobile-12.png" alt="">
+                    <h6 class="text-orange text-center mt-4">
+                      INTEGRITY
+                    </h6>
+                    <p class="text-gray text-center mr-4">
+                      Menumbuhkan integritas dikalangan para pemangku kepentingan guna memperoleh kepercayaan mitra kerja.
+                    </p>
+                  </div>
+                </div>
+            </div>
+            <div class="item">
+              <div class="row">
+                <div class="col-lg-12">
+                  <img class="img-fluid w-50 mx-auto" src="images/about-visi-content-mobile-13.png" alt="">
+                  <h6 class="text-orange text-center mt-4">
+                    CONTINUOUS DEVELOPMENT
+                  </h6>
+                  <p class="text-gray text-center mr-4">
+                    Mendorong peningkatan kompetensi guna membangun sumber daya manusia yang tangguh dan bertanggung jawab yang mampu melakukan perbaikan
+                    terus menerus.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="row">
+                <div class="col-lg-12">
+                  <img class="img-fluid w-50 mx-auto" src="images/about-visi-content-mobile-14.png" alt="">
+                  <h6 class="text-orange text-center mt-4">
+                    OPTIMUM PRODUCTION
+                  </h6>
+                  <p class="text-gray text-center mr-4">
+                    Memperkuat sistim operasional agar efektif mengelola dan memanfaatkan sumberdaya perusahaan untuk mencapai produksi optimal.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="row">
+                <div class="col-lg-12">
+                  <img class="img-fluid w-50 mx-auto" src="images/about-visi-content-mobile-15.png" alt="">
+                  <h6 class="text-orange text-center mt-4">
+                    TEAMWORK
+                  </h6>
+                  <p class="text-gray text-center mr-4">
+                    Menghargai loyalitas, kebersamaan dan kerja keras secara adil untuk membangun kerjasama yang kokoh.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="row">
+                <div class="col-lg-12">
+                  <img class="img-fluid w-50 mx-auto" src="images/about-visi-content-mobile-16.png" alt="">
+                  <h6 class="text-orange text-center mt-4">
+                    EXCELLENCE
+                  </h6>
+                  <p class="text-gray text-center mr-4">
+                    Mengoptimalkan potensi dan pengalaman perusahaan yang menghadirkan solusi bagi mitra kerja, masyarakat dan lingkungan hidup.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-    <div id="nilai" class="container-fluid about-nilai py-lg-5">
+    <div id="nilai" class="container-fluid about-nilai py-5">
       <div class="row py-lg-5 my-lg-5">
-        <div class="col-lg-8  pl-lg-5 offset-lg-3">
+        <div class="col-lg-3"></div>
+        <div class="col-lg-8 pl-lg-5 ml-4 ml-lg-0">
           <h2 class="text-orange mb-lg-4">
             Nilai-Nilai Inti
           </h2>
-          <p class="text-gray mb-lg-5">
-            Ansaf terus mengembangkan semua pemangku kepentingan untuk secara kuat merangkul nilai-nilai dalam<br>
+          <p class="text-gray mb-lg-5 w-80 d-none d-lg-block">
+            Ansaf terus mengembangkan semua pemangku kepentingan untuk secara kuat merangkul nilai-nilai dalam
             memperluas kualitas kepada klien kami:
           </p>
-          <div class="row my-lg-5">
+          <p class="text-gray mb-5 d-lg-none text-justify mr-5">
+            Ansaf terus mengembangkan semua pemangku kepentingan untuk secara kuat merangkul nilai-nilai dalam
+            memperluas kualitas kepada klien kami:
+          </p>
+          <div class="row my-lg-5 d-none d-lg-flex">
             <div class="col-lg-4">
               <img src="images/about-nilai-content-02.jpg" alt="">
               <p class="my-lg-4 text-gray">
@@ -434,16 +500,63 @@
               </p>
             </div>
           </div>
+          <div class="row d-lg-none">
+            <div class="carousel-mobile-stagepadding owl-theme">
+              <div class="item">
+                <img class="mb-3" src="images/nilai-nilai-mobile-17.jpg" alt="">
+                <p class="ml-4 text-gray text-justify">
+                  Jujur dalam menampilkan perilaku produktif untuk memperoleh kepercayaan pelanggan.
+                </p>
+              </div>
+              <div class="item">
+                <img class="mb-3" src="images/nilai-nilai-mobile-18.jpg" alt="">
+                <p class="ml-4 text-gray text-justify">
+                  Mampu bergerak cepat berdasarkan rencana adaptif.
+                </p>
+              </div>
+              <div class="item">
+                <img class="mb-3" src="images/nilai-nilai-mobile-19.jpg" alt="">
+                <p class="ml-4 text-gray text-justify">
+                  Memberikan pekerjaan yang responsif, tepat waktu, dan berkualitas.
+                </p>
+              </div>
+              <div class="item">
+                <img class="mb-3" src="images/nilai-nilai-mobile-20.jpg" alt="">
+                <p class="ml-4 text-gray text-justify">
+                  Mengantisipasi kebutuhan dan persyaratan klien.
+                </p>
+              </div>
+              <div class="item">
+                <img class="mb-3" src="images/nilai-nilai-mobile-21.jpg" alt="">
+                <p class="ml-4 text-gray text-justify">
+                  Antusiasme dan pengabdian kepada pelanggan serta berbagi proses kreatif.
+                </p>
+              </div>
+              <div class="item">
+                <img class="mb-3" src="images/nilai-nilai-mobile-22.jpg" alt="">
+                <p class="ml-4 text-gray text-justify">
+                  Fokus pada solusi, bukan argumen, mengantisipasi masalah terlebih dahulu dan tetap mengingat tujuan akhir.
+                </p>
+              </div>
+              <div class="item">
+                <img class="mb-3" src="images/nilai-nilai-mobile-23.jpg" alt="">
+                <p class="ml-4 text-gray text-justify">
+                  Interaksi timbal balik dengan klien menuju pencapaian tujuan yang disepakati.
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
     <div id="dewan" class="container-fluid bg-light-gray dewan-direksi">
-      <div class="row pt-lg-5 mt-lg-5">
-        <div class="col-lg-8  pl-lg-5 offset-lg-3">
-          <h2 class="text-orange my-lg-5">
+      <div class="row pt-5 mt-lg-5">
+        <div class="col-lg-3"></div>
+        <div class="col-lg-8 pl-lg-5 ml-lg-0 ml-4">
+          <h2 class="text-orange my-5">
             Dewan Komisaris
           </h2>
-          <div class="row my-lg-5">
+          <div class="row my-lg-5 d-none d-lg-flex">
             <div class="col-lg-4">
               <img src="images/about-dewan-content-02.jpg" alt="">
             </div>
@@ -452,18 +565,29 @@
             </div>
             <div class="col-lg-4">
               <img src="images/about-dewan-content-02.jpg" alt="">
+            </div>
+          </div>
+          <div class="row d-lg-none">
+            <div class="carousel-mobile-stagepadding owl-theme">
+              <div class="item">
+                <img src="images/about-dewan-content-02.jpg" alt="">
+              </div>
+              <div class="item">
+                <img src="images/about-dewan-content-02.jpg" alt="">
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
     <div id="direksi" class="container-fluid bg-light-gray  dewan-direksi">
-      <div class="row  py-lg-5">
-        <div class="col-lg-8  pl-lg-5 offset-lg-3">
+      <div class="row py-5">
+        <div class="col-lg-3"></div>
+        <div class="col-lg-8 pl-lg-5 ml-lg-0 ml-4">
           <h2 class="text-orange my-lg-5">
             Direksi
           </h2>
-          <div class="row my-lg-5">
+          <div class="row my-lg-5 d-none d-lg-flex">
             <div class="col-lg-4">
               <img src="images/about-dewan-content-02.jpg" alt="">
             </div>
@@ -471,11 +595,21 @@
               <img src="images/about-dewan-content-02.jpg" alt="">
             </div>
           </div>
+          <div class="row mt-5 d-lg-none">
+            <div class="carousel-mobile-stagepadding owl-theme">
+              <div class="item">
+                <img src="images/about-dewan-content-02.jpg" alt="">
+              </div>
+              <div class="item">
+                <img src="images/about-dewan-content-02.jpg" alt="">
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
     </div>
-    <div class="container-fluid bg-white py-lg-5 footer-top">
+    <div class="container-fluid bg-white py-5 footer-top">
       <div class="row text-center">
           <div class="col-lg-12">
               <h4 class="text-dark-blue pb-lg-4 d-none d-lg-block">
@@ -483,8 +617,8 @@
               </h4>
               <h4 class="text-dark-blue pb-5 d-lg-none">
                 Cari Tahu<br>
-                Tentang Kami<br>
-                Lebih Lagi
+                Lebih Tentang<br>
+                Kami
               </h4>
           </div>
       </div>
@@ -513,10 +647,10 @@
           <img class="img-fluid text-right logo" src="images/ansaf-logo.png" alt="">
       </div>
       <div class="col-lg-4 py-lg-0 py-4">
-          <p class="text-gray">
-              Kantor Taman E3.3 Unit B5<br>
-              Jl Dr Ide Anak Agung Gede Agung Lot<br>
-              Kawasan Mega Kuningan Jakarta 12950
+          <p class="text-gray alamat">
+              Kantor Taman E.3.3 Unit B5<br>
+              Jl. Dr. Ide Anak Agung Gde Agung, Kuningan Timur,
+              Setiabudi, Jakarta Selatan 12950
           </p>
       </div>
       <div class="col-lg-3 fax-column text-center">
