--- a/businesses.html
+++ b/businesses.html
@@ -200,16 +200,16 @@
                   <img class="img-fluid w-100" src="images/business-image-placement-07.jpg" alt="">
                 </div>
                 <div class="col-lg-5 col-12 details" data-aos="fade-right">
-                  <p class="text-gray brief-details">
+                  <p class="text-gray brief-details text-justify my-lg-0 my-5">
                     Bisnis utama Ansaf adalah menyediakan jasa pertambangan, dalam bentuk pemindahan lapisan penutup, ekstraksi batubara, transportasi ke stock pile untuk pengiriman lebih lanjut. 
                     <br><br>
-Guna memenuhi kebutuhan customer, dalam waktu singkat, Ansaf mampu menggalang tenaga kerja berkualitas serta alat produksi yang tepat untuk melaksanakan kegiatan penambangan batubara.
+                    Guna memenuhi kebutuhan customer, dalam waktu singkat, Ansaf mampu menggalang tenaga kerja berkualitas serta alat produksi yang tepat untuk melaksanakan kegiatan penambangan batubara.
                     <br>
-<a href="projects.html" class="link-orange-border my-lg-5 d-inline-block">
-  <span class="text-orange">
-    LIHAT PROYEK KAMI
-  </span> 
-</a>
+                    <a href="projects.html" class="link-orange-border my-5 d-inline-block">
+                      <span class="text-orange">
+                        LIHAT PROYEK KAMI
+                      </span> 
+                    </a>
                   </p>
                 </div>
               </div>
@@ -220,14 +220,14 @@ Guna memenuhi kebutuhan customer, dalam waktu singkat, Ansaf mampu menggalang te
                   <img class="img-fluid w-100" src="images/business-image-placement-07.jpg" alt="">
                 </div>
                 <div class="col-lg-5 col-12 details">
-                  <p class="text-gray brief-details">
+                  <p class="text-gray brief-details my-lg-0 my-5">
                     Bersama mitra-mitra yang handal Ansaf membangun kerjasama menyediakan berbagai pelayanan yang dibutuhkan dalam bisnis penambangan batubara.
                   </p>
                 </div>
               </div>
-              <div class="container py-lg-5">
+              <div class="container py-lg-5 px-4 pl-lg-2 pr-lg-0">
                 <div class="row">
-                  <div class="col-lg-3 text-center">
+                  <div class="col-lg-3 px-3 py-lg-0 py-3 col-6 text-center">
                     <a href="#" data-toggle="modal" data-target="#psm">
                       <img class="img-fluid" src="images/logo-bisnis-psm-05.png" alt="">
                     </a>
@@ -237,7 +237,7 @@ Guna memenuhi kebutuhan customer, dalam waktu singkat, Ansaf mampu menggalang te
                       </h6>
                     </a>
                   </div>
-                  <div class="col-lg-3 text-center">
+                  <div class="col-lg-3 px-3 py-lg-0 py-3 col-6 text-center">
                     <a href="#" data-toggle="modal" data-target="#esp">
                       <img class="img-fluid" src="images/logo-bisnis-esp-05.png" alt="">
                     </a>
@@ -247,7 +247,7 @@ Guna memenuhi kebutuhan customer, dalam waktu singkat, Ansaf mampu menggalang te
                       </h6>
                     </a>
                   </div>
-                  <div class="col-lg-3 text-center">
+                  <div class="col-lg-3 px-3 py-lg-0 py-3 col-6 text-center">
                     <a href="#" data-toggle="modal" data-target="#exampleModal">
                       <img class="img-fluid" src="images/logo-bisnis-red-05.png" alt="">
                     </a>
@@ -257,7 +257,7 @@ Guna memenuhi kebutuhan customer, dalam waktu singkat, Ansaf mampu menggalang te
                       </h6>
                     </a>
                   </div>
-                  <div class="col-lg-3 text-center">
+                  <div class="col-lg-3 px-3 py-lg-0 py-3 col-6 text-center">
                     <a href="#" data-toggle="modal" data-target="#exampleModal">
                       <img class="img-fluid" src="images/logo-bisnis-mount-05.png" alt="">
                     </a>
@@ -274,14 +274,15 @@ Guna memenuhi kebutuhan customer, dalam waktu singkat, Ansaf mampu menggalang te
         </div>
       </div>
     </div>
-    <div class="container-fluid py-lg-5">
+    <div class="container-fluid py-5 footer-top">
       <div class="row text-center mt-lg-5">
           <div class="col-lg-12">
               <h4 class="text-dark-blue pb-lg-4 d-none d-lg-block">
                 Apa yang ingin ditanyakan?
               </h4>
               <h4 class="text-dark-blue pb-5 d-lg-none">
-                Apa yang ingin ditanyakan?
+                Ada yang<br>
+                ingin ditanyakan?
               </h4>
           </div>
       </div>
@@ -299,17 +300,17 @@ Guna memenuhi kebutuhan customer, dalam waktu singkat, Ansaf mampu menggalang te
           </div>
       </div>
   </div>
-  <div class="container-fluid footer-details mb-5">
+  <div class="container-fluid footer-details bg-white mb-5 pt-5">
     <div class="row">
       <div class="col-lg-2">
           <img class="img-fluid text-right logo" src="images/ansaf-logo.png" alt="">
       </div>
       <div class="col-lg-4 py-lg-0 py-4">
-          <p class="text-gray">
-              Kantor Taman E.3.3 Unit B5<br>
-              Jl. Dr. Ide Anak Agung Gde Agung, Kuningan Timur,<br>
-              Setiabudi, Jakarta Selatan 12950
-          </p>
+        <p class="text-gray alamat">
+          Kantor Taman E.3.3 Unit B5<br>
+          Jl. Dr. Ide Anak Agung Gde Agung, Kuningan Timur,
+          Setiabudi, Jakarta Selatan 12950
+        </p>
       </div>
       <div class="col-lg-3 fax-column text-center">
           <a href="#" class="link-orange-border">
@@ -339,10 +340,10 @@ Guna memenuhi kebutuhan customer, dalam waktu singkat, Ansaf mampu menggalang te
       <div class="modal-body">
         <div class="row">
           <div class="col-lg-7 pr-lg-0">
+            <img class="close-mobile d-lg-none" data-dismiss="modal"  src="images/close-icon-orange-03.png" alt="">
                 <img class="w-100" src="images/business-new-content-06.jpg" alt="">
           </div>
-          <div class="col-lg-5 pl-lg-0 bg-white pt-lg-4 pr-lg-4">
-            <img class="float-right" data-dismiss="modal"  src="images/close-icon-orange-03.png" alt="">
+          <div class="col-lg-5 pl-lg-0 bg-white pt-lg-4 pr-lg-4 mx-lg-0 mx-3">
             <div class="content-wrapper d-flex">
               <div class="inline-block pl-lg-4">
                 <img src="images/logo-bisnis-psm-05.png" alt="">
@@ -366,10 +367,11 @@ Di bawah pengawasan tenaga ahli di bidang jasa pelabuhan batubara, PSM menyediak
       <div class="modal-body">
         <div class="row">
           <div class="col-lg-7 pr-lg-0">
+            <img class="close-mobile d-lg-none" data-dismiss="modal"  src="images/close-icon-orange-03.png" alt="">
                 <img class="w-100" src="images/business-new-content-05.jpg" alt="">
           </div>
-          <div class="col-lg-5 pl-lg-0 bg-white pt-lg-4 pr-lg-4">
-            <img class="float-right" data-dismiss="modal"  src="images/close-icon-orange-03.png" alt="">
+          <div class="col-lg-5 pl-lg-0 bg-white pt-lg-4 pr-lg-4 mx-lg-0 mx-3">
+            <img class="float-right d-none d-lg-block" data-dismiss="modal"  src="images/close-icon-orange-03.png" alt="">
             <div class="content-wrapper d-flex">
               <div class="inline-block pl-lg-4">
                 <img src="images/logo-bisnis-esp-05.png" alt="">
