--- a/csr.html
+++ b/csr.html
@@ -20,7 +20,7 @@
         <div class="col-lg-2 ml-lg-5">
           <a href="index.html">
             <img class="img-fluid logo d-none d-lg-block" src="images/ansaf-logo.png" alt="">
-            <img class="img-fluid logo d-lg-none" src="images/logo-white.png" alt="">
+            <img class="img-fluid logo d-lg-none" src="images/ansaf-logo.png" alt="">
           </a>
         </div>
         <div class="col-lg-8 menu-wrap ml-lg-5 d-none d-lg-block">
@@ -85,66 +85,42 @@
               <img src="images/icon-times-16.png" alt="">
           </a>
           <ul>
-              <li>
-                <a href="#">
-                  About Us
-                </a>
-                <ul>
-                  <li>
-                    <a href="about.html">
-                      Company Profile
-                    </a>
-                  </li>
-                  <li>
-                    <a href="vision-mission.html">
-                      Vision & Mission
-                    </a>
-                  </li>
-                  <li>
-                    <a href="bod.html">
-                      Board of Directors
-                    </a>
-                  </li>
-                </ul>
-              </li>
-              <li>
-                <a href="businesses.html">
-                  Our Businesses
-                </a>
-              </li>
-              <li>
-                <a href="projects.html">
-                  Our Projects
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  CSR
-                </a>
-                <ul>
-                  <li>
-                    <a href="csr.html">
-                     CSR Program
-                    </a>
-                  </li>
-                  <li>
-                    <a href="csr-activities.html">
-                      CSR Activities
-                    </a>
-                  </li>
-                </ul>
-              </li>
-              <li>
-                <a href="gallery.html">
-                  Gallery
-                </a>
-              </li>
-              <li>
+            <li>
+              <a href="about.html">
+                Tentang Kami
+              </a>
+            </li>
+            <li>
+              <a href="businesses.html">
+                Bisnis Kami
+              </a>
+            </li>
+            <li>
+              <a href="projects.html">
+                Proyek Kami
+              </a>
+            </li>
+            <li>
+              <a href="csr.html">
+                CSR
+              </a>
+            </li>
+            <li>
+              <a href="gallery.html">
+                Galeri
+              </a>
+            </li>
+            <li>
+              <a href="career.html">
+                Karir
+              </a>
+            </li>
+            <li>
                 <a href="contact.html">
-                  Contact Us
+                  Kontak Kami
                 </a>
-              </li> 
-            </ul>
+              </li>
+          </ul>
             <hr class="my-5">
             <div class="lang-ansaf">
               <ul>
@@ -188,13 +164,13 @@
           <div class="content-wrapper d-flex">
             <div class="inline-block pl-lg-5 offset-lg-1" data-aos="fade-right">
                 <p class="text-white brief">
-                  ANSAF menyadari makna CSR sebagai sarana membangun<br>
-                  hubungan sosial dengan masyarakat sekitar proyek yang<br>
-                  pelaksanaannya harus tepat sasaran dan membawa manfaat<br>
+                  ANSAF menyadari makna CSR sebagai sarana membangun
+                  hubungan sosial dengan masyarakat sekitar proyek yang
+                  pelaksanaannya harus tepat sasaran dan membawa manfaat
                   berkelanjutan.<br>
                   <br>
-                  Penerapan kebijakan ini ditekankan pada upaya membangun<br>
-                  hubungan yang saling memahami dengan nilai silaturrahim,<br>
+                  Penerapan kebijakan ini ditekankan pada upaya membangun
+                  hubungan yang saling memahami dengan nilai silaturrahim,
                   ketulusan serta kejujuran.
                 </p>
             </div>
@@ -202,9 +178,9 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-lg-7 pl-lg-0">
+    <div class="container-fluid content-csr pt-lg-0 pt-5">
+      <div class="row mt-lg-0 mt-5">
+        <div class="col-lg-7 pl-lg-0 pr-lg-3 pr-0">
           <div class="carousel-csr owl-theme">
             <div class="item">
               <img src="images/csr-gallery-04.jpg" alt="">
@@ -217,30 +193,27 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-5 py-lg-5 pl-lg-5">
+        <div class="col-lg-5 py-lg-5 pl-lg-5 pl-4">
           <br><br><br>
           <h2 class="text-orange mb-lg-3 mt-lg-5">
             Instalasi Pengolahan Air
           </h2>
-          <p class="text-gray">
-            Bekerjasama dengan Dana Peduli Umat<br>
-            mendirikan instalasi pengolahan air di Desa<br>
-            Purwajaya, Kalimantan Timur
+          <p class="text-gray brief-1">
+            Bekerjasama dengan Dana Peduli Umat mendirikan instalasi pengolahan air di Desa Purwajaya, Kalimantan Timur
           </p>
         </div>
       </div>
-      <div class="row my-lg-5 py-lg-5">
-        <div class="col-lg-4 offset-lg-1 py-lg-5">
+      <div class="row my-lg-5 py-5">
+        <div class="col-lg-4 offset-lg-1 py-lg-5 pl-4 order-2 order-lg-1">
           <br><br><br>
           <h2 class="text-orange mb-lg-3 mt-lg-5">
             Khitanan Masal
           </h2>
-          <p class="text-gray">
-            Bekerjasama dengan Dana Peduli Umat Kaltim<br>
-            mengadakan khitanan massal bagi anak-anak
+          <p class="text-gray brief-2">
+            Bekerjasama dengan Dana Peduli Umat Kaltim mengadakan khitanan massal bagi anak-anak
           </p>
         </div>
-        <div class="col-lg-7 pl-lg-0">
+        <div class="col-lg-7 pl-lg-0 order-1 order-lg-2">
           <div class="carousel-csr owl-theme">
             <div class="item">
               <img src="images/khitanan-masal-content-04.jpg" alt="">
@@ -249,7 +222,7 @@
         </div>
       </div>
     </div>  
-    <div class="container-fluid bg-white py-lg-5">
+    <div class="container-fluid footer-top bg-white py-lg-5">
       <div class="row text-center">
           <div class="col-lg-12">
               <h4 class="text-dark-blue pb-lg-4 d-none d-lg-block">
@@ -282,10 +255,10 @@
           <img class="img-fluid text-right logo" src="images/ansaf-logo.png" alt="">
       </div>
       <div class="col-lg-4 py-lg-0 py-4">
-          <p class="text-gray">
-              Kantor Taman E3.3 Unit B5<br>
-              Jl Dr Ide Anak Agung Gede Agung Lot<br>
-              Kawasan Mega Kuningan Jakarta 12950
+          <p class="text-gray alamat">
+            Kantor Taman E.3.3 Unit B5<br>
+            Jl. Dr. Ide Anak Agung Gde Agung, Kuningan Timur,
+            Setiabudi, Jakarta Selatan 12950
           </p>
       </div>
       <div class="col-lg-3 fax-column text-center">
