--- a/businesses.html
+++ b/businesses.html
@@ -278,11 +278,11 @@
       <div class="row text-center mt-lg-5">
           <div class="col-lg-12">
               <h4 class="text-dark-blue pb-lg-4 d-none d-lg-block">
-                Apa yang ingin ditanyakan?
+                Lihat Perjalanan Kami
               </h4>
               <h4 class="text-dark-blue pb-5 d-lg-none">
-                Ada yang<br>
-                ingin ditanyakan?
+                Lihat<br>
+                Perjalanan Kami
               </h4>
           </div>
       </div>
@@ -290,9 +290,9 @@
           <div class="container">
               <div class="row text-center mb-lg-0 mb-5">
                   <div class="col-lg-12 pb-lg-0 pb-5">
-                    <a href="contact.html" class="link-orange-border mx-lg-4 mb-5 mb-lg-0">
+                    <a href="gallery.html" class="link-orange-border mx-lg-4 mb-5 mb-lg-0">
                       <span class="text-orange">
-                        HUBUNGI KAMI
+                        GALERI
                       </span> 
                    </a>
                   </div>
