--- a/gallery.html
+++ b/gallery.html
@@ -20,7 +20,7 @@
         <div class="col-lg-2 ml-lg-5">
           <a href="index.html">
             <img class="img-fluid logo d-none d-lg-block" src="images/ansaf-logo.png" alt="">
-            <img class="img-fluid logo d-lg-none" src="images/logo-white.png" alt="">
+            <img class="img-fluid logo d-lg-none" src="images/ansaf-logo.png" alt="">
           </a>
         </div>
         <div class="col-lg-8 menu-wrap ml-lg-5 d-none d-lg-block">
@@ -85,66 +85,42 @@
               <img src="images/icon-times-16.png" alt="">
           </a>
           <ul>
-              <li>
-                <a href="#">
-                  About Us
-                </a>
-                <ul>
-                  <li>
-                    <a href="about.html">
-                      Company Profile
-                    </a>
-                  </li>
-                  <li>
-                    <a href="vision-mission.html">
-                      Vision & Mission
-                    </a>
-                  </li>
-                  <li>
-                    <a href="bod.html">
-                      Board of Directors
-                    </a>
-                  </li>
-                </ul>
-              </li>
-              <li>
-                <a href="businesses.html">
-                  Our Businesses
-                </a>
-              </li>
-              <li>
-                <a href="projects.html">
-                  Our Projects
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  CSR
-                </a>
-                <ul>
-                  <li>
-                    <a href="csr.html">
-                     CSR Program
-                    </a>
-                  </li>
-                  <li>
-                    <a href="csr-activities.html">
-                      CSR Activities
-                    </a>
-                  </li>
-                </ul>
-              </li>
-              <li>
-                <a href="gallery.html">
-                  Gallery
-                </a>
-              </li>
-              <li>
+            <li>
+              <a href="about.html">
+                Tentang Kami
+              </a>
+            </li>
+            <li>
+              <a href="businesses.html">
+                Bisnis Kami
+              </a>
+            </li>
+            <li>
+              <a href="projects.html">
+                Proyek Kami
+              </a>
+            </li>
+            <li>
+              <a href="csr.html">
+                CSR
+              </a>
+            </li>
+            <li>
+              <a href="gallery.html">
+                Galeri
+              </a>
+            </li>
+            <li>
+              <a href="career.html">
+                Karir
+              </a>
+            </li>
+            <li>
                 <a href="contact.html">
-                  Contact Us
+                  Kontak Kami
                 </a>
               </li> 
-            </ul>
+          </ul>
             <hr class="my-5">
             <div class="lang-ansaf">
               <ul>
@@ -190,168 +166,51 @@
           </p>
         </div>
       </div>
-      <div class="row thumbnail-gallery mx-lg-3 mt-lg-5 text-center d-none d-lg-flex" data-aos="fade-up">
-        <div class="col-lg-4 my-lg-3">
+      <div class="row thumbnail-gallery mx-lg-3 mt-lg-5 text-center" data-aos="fade-up">
+        <div class="col-lg-4 col-6 my-3">
           <a href="#" data-toggle="modal" data-target="#exampleModal">
             <img class="img-fluid" src="images/gallery-new-content-04.jpg" alt="">
           </a>
         </div>
-        <div class="col-lg-4 my-lg-3">
+        <div class="col-lg-4 col-6 my-3">
           <a href="#" data-toggle="modal" data-target="#modal2">
             <img class="img-fluid" src="images/gallery-new-content-05.jpg" alt="">
           </a>
         </div>
-        <div class="col-lg-4 my-lg-3">
+        <div class="col-lg-4 col-6 my-3">
           <a href="#" data-toggle="modal" data-target="#modal3">
             <img class="img-fluid" src="images/gallery-new-content-06.jpg" alt="">
           </a>
         </div>
-        <div class="col-lg-4 my-lg-3">
+        <div class="col-lg-4 col-6 my-3">
           <a href="#" data-toggle="modal" data-target="#modal4">
             <img class="img-fluid" src="images/gallery-new-content-07.jpg" alt="">
           </a>
         </div>
-        <div class="col-lg-4 my-lg-3">
+        <div class="col-lg-4 col-6 my-3">
           <a href="#" data-toggle="modal" data-target="#modal5">
             <img class="img-fluid" src="images/gallery-new-content-08.jpg" alt="">
           </a>
         </div>
-        <div class="col-lg-4 my-lg-3">
+        <div class="col-lg-4 col-6 my-3">
           <a href="#" data-toggle="modal" data-target="#modal6">
             <img class="img-fluid" src="images/gallery-new-content-09.jpg" alt="">
           </a>
         </div>
-        <div class="col-lg-4 my-lg-3">
+        <div class="col-lg-4 col-6 my-3">
           <a href="#" data-toggle="modal" data-target="#modal7">
             <img class="img-fluid" src="images/gallery-new-content-10.jpg" alt="">
           </a>
         </div>
-        <div class="col-lg-4 my-lg-3">
+        <div class="col-lg-4 col-6 my-3">
           <a href="#" data-toggle="modal" data-target="#modal8">
             <img class="img-fluid" src="images/gallery-new-content-11.jpg" alt="">
           </a>
         </div>
-        <div class="col-lg-4 my-lg-3">
+        <div class="col-lg-4 col-6 my-3 d-none d-lg-block">
           <a href="#" data-toggle="modal" data-target="#modal9">
             <img class="img-fluid" src="images/gallery-new-content-12.jpg" alt="">
           </a>
-        </div>
-        <div class="col-lg-4 my-lg-3">
-          <a href="#" data-toggle="modal" data-target="#modal10">
-            <img class="img-fluid" src="images/gallery-new-content-13.jpg" alt="">
-          </a>
-        </div>
-      </div>
-      <div class="row d-lg-none my-5 mx-2" data-aos="fade-up">
-        <div class="carousel-mobile-projects-list owl-theme">
-          <div class="item">
-            <div class="row">
-              <div class="col-6 my-3">
-                <a href="#" data-toggle="modal" data-target="#exampleModal">
-                  <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
-                </a>
-                <h5 class="text-dark-blue mt-4 mb-2">
-                  Lorem Ipsum
-                </h5>
-              </div>
-              <div class="col-6 my-3">
-                <a href="#" data-toggle="modal" data-target="#exampleModal">
-                  <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
-                </a>
-                <h5 class="text-dark-blue mt-4 mb-2">
-                  Lorem Ipsum
-                </h5>
-              </div>
-              <div class="col-6 my-3">
-                <a href="#" data-toggle="modal" data-target="#exampleModal">
-                  <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
-                </a>
-                <h5 class="text-dark-blue mt-4 mb-2">
-                  Lorem Ipsum
-                </h5>
-              </div>
-              <div class="col-6 my-3">
-                <a href="#" data-toggle="modal" data-target="#exampleModal">
-                  <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
-                </a>
-                <h5 class="text-dark-blue mt-4 mb-2">
-                  Lorem Ipsum
-                </h5>
-              </div>
-              <div class="col-6 my-3">
-                <a href="#" data-toggle="modal" data-target="#exampleModal">
-                  <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
-                </a>
-                <h5 class="text-dark-blue mt-4 mb-2">
-                  Lorem Ipsum
-                </h5>
-              </div>
-              <div class="col-6 my-3">
-                <a href="#" data-toggle="modal" data-target="#exampleModal">
-                  <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
-                </a>
-                <h5 class="text-dark-blue mt-4 mb-2">
-                  Lorem Ipsum
-                </h5>
-              </div>
-            </div>
-            <hr class="d-lg-none mt-4 mb-5"> 
-            <h6 class="text-right my-5">1/4</h6>
-          </div>
-          <div class="item">
-            <div class="row">
-              <div class="col-6 my-3">
-                <a href="#" data-toggle="modal" data-target="#exampleModal">
-                  <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
-                </a>
-                <h5 class="text-dark-blue mt-4 mb-2">
-                  Lorem Ipsum
-                </h5>
-              </div>
-              <div class="col-6 my-3">
-                <a href="#" data-toggle="modal" data-target="#exampleModal">
-                  <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
-                </a>
-                <h5 class="text-dark-blue mt-4 mb-2">
-                  Lorem Ipsum
-                </h5>
-              </div>
-              <div class="col-6 my-3">
-                <a href="#" data-toggle="modal" data-target="#exampleModal">
-                  <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
-                </a>
-                <h5 class="text-dark-blue mt-4 mb-2">
-                  Lorem Ipsum
-                </h5>
-              </div>
-              <div class="col-6 my-3">
-                <a href="#" data-toggle="modal" data-target="#exampleModal">
-                  <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
-                </a>
-                <h5 class="text-dark-blue mt-4 mb-2">
-                  Lorem Ipsum
-                </h5>
-              </div>
-              <div class="col-6 my-3">
-                <a href="#" data-toggle="modal" data-target="#exampleModal">
-                  <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
-                </a>
-                <h5 class="text-dark-blue mt-4 mb-2">
-                  Lorem Ipsum
-                </h5>
-              </div>
-              <div class="col-6 my-3">
-                <a href="#" data-toggle="modal" data-target="#exampleModal">
-                  <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
-                </a>
-                <h5 class="text-dark-blue mt-4 mb-2">
-                  Lorem Ipsum
-                </h5>
-              </div>
-            </div>
-            <hr class="d-lg-none mt-4 mb-5"> 
-            <h6 class="text-right my-5">2/4</h6>
-          </div>
         </div>
       </div>
     </div>
@@ -380,16 +239,16 @@
             </div>
             <div class="row d-lg-none">
               <div class="col-lg-12 pt-5 mt-4">
-                <img class="float-right" data-dismiss="modal"  src="images/close-icon-orange-03.png" alt="">
+                <img class="close-mobile" data-dismiss="modal"  src="images/close-icon-orange-03.png" alt="">
                 <div class="carousel-gallery owl-theme">
                   <div class="item">
-                    <img src="images/gallery-thumbnail-content-03.jpg" alt="">
+                    <img src="images/gallery-new-content-04.jpg" alt="">
                   </div>
                   <div class="item">
-                    <img src="images/gallery-thumbnail-content-03.jpg" alt="">
+                    <img src="images/gallery-new-content-04.jpg" alt="">
                   </div>
                   <div class="item">
-                    <img src="images/gallery-thumbnail-content-03.jpg" alt="">
+                    <img src="images/gallery-new-content-04.jpg" alt="">
                   </div>
                 </div>
               </div>
@@ -423,7 +282,7 @@
             </div>
             <div class="row d-lg-none">
               <div class="col-lg-12 pt-5 mt-4">
-                <img class="float-right" data-dismiss="modal"  src="images/close-icon-orange-03.png" alt="">
+                <img class="close-mobile" data-dismiss="modal"  src="images/close-icon-orange-03.png" alt="">
                 <div class="carousel-gallery owl-theme">
                   <div class="item">
                     <img src="images/gallery-thumbnail-content-03.jpg" alt="">
@@ -466,7 +325,7 @@
             </div>
             <div class="row d-lg-none">
               <div class="col-lg-12 pt-5 mt-4">
-                <img class="float-right" data-dismiss="modal"  src="images/close-icon-orange-03.png" alt="">
+                <img class="close-mobile" data-dismiss="modal"  src="images/close-icon-orange-03.png" alt="">
                 <div class="carousel-gallery owl-theme">
                   <div class="item">
                     <img src="images/gallery-thumbnail-content-03.jpg" alt="">
@@ -509,7 +368,7 @@
             </div>
             <div class="row d-lg-none">
               <div class="col-lg-12 pt-5 mt-4">
-                <img class="float-right" data-dismiss="modal"  src="images/close-icon-orange-03.png" alt="">
+                <img class="close-mobile" data-dismiss="modal"  src="images/close-icon-orange-03.png" alt="">
                 <div class="carousel-gallery owl-theme">
                   <div class="item">
                     <img src="images/gallery-thumbnail-content-03.jpg" alt="">
@@ -552,7 +411,7 @@
             </div>
             <div class="row d-lg-none">
               <div class="col-lg-12 pt-5 mt-4">
-                <img class="float-right" data-dismiss="modal"  src="images/close-icon-orange-03.png" alt="">
+                <img class="close-mobile" data-dismiss="modal"  src="images/close-icon-orange-03.png" alt="">
                 <div class="carousel-gallery owl-theme">
                   <div class="item">
                     <img src="images/gallery-thumbnail-content-03.jpg" alt="">
@@ -595,7 +454,7 @@
             </div>
             <div class="row d-lg-none">
               <div class="col-lg-12 pt-5 mt-4">
-                <img class="float-right" data-dismiss="modal"  src="images/close-icon-orange-03.png" alt="">
+                <img class="close-mobile" data-dismiss="modal"  src="images/close-icon-orange-03.png" alt="">
                 <div class="carousel-gallery owl-theme">
                   <div class="item">
                     <img src="images/gallery-thumbnail-content-03.jpg" alt="">
@@ -638,7 +497,7 @@
             </div>
             <div class="row d-lg-none">
               <div class="col-lg-12 pt-5 mt-4">
-                <img class="float-right" data-dismiss="modal"  src="images/close-icon-orange-03.png" alt="">
+                <img class="close-mobile" data-dismiss="modal"  src="images/close-icon-orange-03.png" alt="">
                 <div class="carousel-gallery owl-theme">
                   <div class="item">
                     <img src="images/gallery-thumbnail-content-03.jpg" alt="">
@@ -681,7 +540,7 @@
             </div>
             <div class="row d-lg-none">
               <div class="col-lg-12 pt-5 mt-4">
-                <img class="float-right" data-dismiss="modal"  src="images/close-icon-orange-03.png" alt="">
+                <img class="close-mobile" data-dismiss="modal"  src="images/close-icon-orange-03.png" alt="">
                 <div class="carousel-gallery owl-theme">
                   <div class="item">
                     <img src="images/gallery-thumbnail-content-03.jpg" alt="">
@@ -724,7 +583,7 @@
             </div>
             <div class="row d-lg-none">
               <div class="col-lg-12 pt-5 mt-4">
-                <img class="float-right" data-dismiss="modal"  src="images/close-icon-orange-03.png" alt="">
+                <img class="close-mobile" data-dismiss="modal"  src="images/close-icon-orange-03.png" alt="">
                 <div class="carousel-gallery owl-theme">
                   <div class="item">
                     <img src="images/gallery-thumbnail-content-03.jpg" alt="">
@@ -767,7 +626,7 @@
             </div>
             <div class="row d-lg-none">
               <div class="col-lg-12 pt-5 mt-4">
-                <img class="float-right" data-dismiss="modal"  src="images/close-icon-orange-03.png" alt="">
+                <img class="close-mobile" data-dismiss="modal"  src="images/close-icon-orange-03.png" alt="">
                 <div class="carousel-gallery owl-theme">
                   <div class="item">
                     <img src="images/gallery-thumbnail-content-03.jpg" alt="">
@@ -785,15 +644,15 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid bg-white py-lg-5">
+    <div class="container-fluid footer-top bg-white py-lg-5">
       <div class="row text-center">
           <div class="col-lg-12">
               <h4 class="text-dark-blue pb-lg-4 d-none d-lg-block">
                 Tertarik dengan Kegiatan Kami?
               </h4>
               <h4 class="text-dark-blue pb-5 d-lg-none">
-                Masih ada<br>
-                pertanyaan?
+                Tertarik dengan<br>
+                Kegiatan Kami?
               </h4>
           </div>
       </div>
@@ -827,10 +686,10 @@
           <img class="img-fluid text-right logo" src="images/ansaf-logo.png" alt="">
       </div>
       <div class="col-lg-4 py-lg-0 py-4">
-          <p class="text-gray">
-              Kantor Taman E3.3 Unit B5<br>
-              Jl Dr Ide Anak Agung Gede Agung Lot<br>
-              Kawasan Mega Kuningan Jakarta 12950
+          <p class="text-gray alamat">
+            Kantor Taman E.3.3 Unit B5<br>
+            Jl. Dr. Ide Anak Agung Gde Agung, Kuningan Timur,
+            Setiabudi, Jakarta Selatan 12950
           </p>
       </div>
       <div class="col-lg-3 fax-column text-center">
