--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
         <div class="col-lg-2 ml-lg-5">
           <a href="index.html">
             <img class="img-fluid logo d-none d-lg-block" src="images/ansaf-logo.png" alt="">
-            <img class="img-fluid logo d-lg-none" src="images/logo-white.png" alt="">
+            <img class="img-fluid logo d-lg-none" src="images/ansaf-logo.png" alt="">
           </a>
         </div>
         <div class="col-lg-8 menu-wrap ml-lg-5 d-none d-lg-block">
@@ -85,66 +85,42 @@
               <img src="images/icon-times-16.png" alt="">
           </a>
           <ul>
-              <li>
-                <a href="#">
-                  About Us
-                </a>
-                <ul>
-                  <li>
-                    <a href="about.html">
-                      Company Profile
-                    </a>
-                  </li>
-                  <li>
-                    <a href="vision-mission.html">
-                      Vision & Mission
-                    </a>
-                  </li>
-                  <li>
-                    <a href="bod.html">
-                      Board of Directors
-                    </a>
-                  </li>
-                </ul>
-              </li>
-              <li>
-                <a href="businesses.html">
-                  Our Businesses
-                </a>
-              </li>
-              <li>
-                <a href="projects.html">
-                  Our Projects
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  CSR
-                </a>
-                <ul>
-                  <li>
-                    <a href="csr.html">
-                     CSR Program
-                    </a>
-                  </li>
-                  <li>
-                    <a href="csr-activities.html">
-                      CSR Activities
-                    </a>
-                  </li>
-                </ul>
-              </li>
-              <li>
-                <a href="gallery.html">
-                  Gallery
-                </a>
-              </li>
-              <li>
+            <li>
+              <a href="about.html">
+                Tentang Kami
+              </a>
+            </li>
+            <li>
+              <a href="businesses.html">
+                Bisnis Kami
+              </a>
+            </li>
+            <li>
+              <a href="projects.html">
+                Proyek Kami
+              </a>
+            </li>
+            <li>
+              <a href="csr.html">
+                CSR
+              </a>
+            </li>
+            <li>
+              <a href="gallery.html">
+                Galeri
+              </a>
+            </li>
+            <li>
+              <a href="career.html">
+                Karir
+              </a>
+            </li>
+            <li>
                 <a href="contact.html">
-                  Contact Us
+                  Kontak Kami
                 </a>
-              </li> 
-            </ul>
+              </li>
+          </ul>
             <hr class="my-5">
             <div class="lang-ansaf">
               <ul>
@@ -192,7 +168,7 @@
                     <img class="mt-3 mt-lg-0" src="images/line-gray-11.png" alt="">
                 </div>
                 <div class="inline-block pl-lg-4 pl-2">
-                    <h2 class="text-white mb-lg-4">
+                    <h2 class="text-white mb-4">
                       Masih Memiliki Pertanyaan?
                     </h2>
                     <p class="text-white font-roboto d-none d-lg-block">
