--- a/contact.html
+++ b/contact.html
@@ -218,7 +218,7 @@
     </div>
     <div class="container-fluid bg-light-gray" data-aos="fade-up">
       <div class="row">
-        <div class="col-lg-4 py-lg-5 pl-lg-5">
+        <div class="col-lg-4 py-lg-5 pl-lg-5 pl-4">
           <br><br>
             <h6 class="text-orange">Head Office</h6>
             <p class="text-gray">
@@ -228,39 +228,62 @@
             Jakarta Selatan 12950<br>
             +62 21 5764 388 - 89<br>
             </p><br>
-            <h6 class="text-orange">
+            <h6 class="text-orange d-none d-lg-block">
               Samarinda Region Office
             </h6>
-            <p class="text-gray">
+            <p class="text-gray d-none d-lg-block">
               Jl. KH. Wahid Hasyim 1 No. 26, Sempaja Selatan<br>
               Samarinda Utara, Samarinda<br>
               Kalimantan Timur 75119<br>
               +62 541 260 226<br>
             </p><br>
-            <h6 class="text-orange">
+            <h6 class="text-orange d-none d-lg-block">
               Lahat Region Office
             </h6>
-            <p class="text-gray">
+            <p class="text-gray d-none d-lg-block">
               Jl. Drs. H. Sueb Tamat Blok AA RT10/03<br>
               Bandar Jaya, Lahat, Kab. Lahat<br>
               Sumatera Selatan 31414<br>
-            </p><br>
+              <br>
+            </p>
         </div>
         <div class="col-lg-8 px-0">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126908.54688582964!2d106.71306270309152!3d-6.277915696726387!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f3fcf7feefe9%3A0xde61fbb431a279ea!2sPT.Ansaf%20Inti%20Resources!5e0!3m2!1sen!2sid!4v1628241313552!5m2!1sen!2sid" style="border:0;" allowfullscreen="" class="w-100" height="700"></iframe>
         </div>
       </div>
+      <div class="row my-5 d-lg-none">
+        <div class="col-lg-12 pl-4">
+          <h6 class="text-orange">
+            Samarinda Region Office
+          </h6>
+          <p class="text-gray">
+            Jl. KH. Wahid Hasyim 1 No. 26, Sempaja Selatan<br>
+            Samarinda Utara, Samarinda<br>
+            Kalimantan Timur 75119<br>
+            +62 541 260 226<br>
+          </p><br>
+          <h6 class="text-orange">
+            Lahat Region Office
+          </h6>
+          <p class="text-gray">
+            Jl. Drs. H. Sueb Tamat Blok AA RT10/03<br>
+            Bandar Jaya, Lahat, Kab. Lahat<br>
+            Sumatera Selatan 31414<br>
+            <br>
+          </p>
+        </div>
+      </div>
     </div>
-    <div class="container-fluid bg-white py-lg-5">
+    <div class="container-fluid footer-top bg-white py-lg-5">
       <div class="row text-center">
           <div class="col-lg-12">
               <h4 class="text-dark-blue pb-lg-4 d-none d-lg-block">
-                Ingin tau lebih mengenai Program kami?
+                Cari Tahu Lebih Tentang Kami
               </h4>
               <h4 class="text-dark-blue pb-5 d-lg-none">
-                Ingin tau<br>
-                lebih mengenai<br>
-                Program kami?
+                Cari Tahu<br>
+                Lebih Tentang<br>
+                Kami
               </h4>
           </div>
       </div>
@@ -304,10 +327,10 @@
           <img class="img-fluid text-right logo" src="images/ansaf-logo.png" alt="">
       </div>
       <div class="col-lg-4 py-lg-0 py-4">
-          <p class="text-gray">
-              Kantor Taman E3.3 Unit B5<br>
-              Jl Dr Ide Anak Agung Gede Agung Lot<br>
-              Kawasan Mega Kuningan Jakarta 12950
+          <p class="text-gray alamat">
+            Kantor Taman E.3.3 Unit B5<br>
+            Jl. Dr. Ide Anak Agung Gde Agung, Kuningan Timur,
+            Setiabudi, Jakarta Selatan 12950
           </p>
       </div>
       <div class="col-lg-3 fax-column text-center">
