--- a/career.html
+++ b/career.html
@@ -20,7 +20,7 @@
         <div class="col-lg-2 ml-lg-5">
           <a href="index.html">
             <img class="img-fluid logo d-none d-lg-block" src="images/ansaf-logo.png" alt="">
-            <img class="img-fluid logo d-lg-none" src="images/logo-white.png" alt="">
+            <img class="img-fluid logo d-lg-none" src="images/ansaf-logo.png" alt="">
           </a>
         </div>
         <div class="col-lg-8 menu-wrap ml-lg-5 d-none d-lg-block">
@@ -85,66 +85,42 @@
               <img src="images/icon-times-16.png" alt="">
           </a>
           <ul>
-              <li>
-                <a href="#">
-                  About Us
-                </a>
-                <ul>
-                  <li>
-                    <a href="about.html">
-                      Company Profile
-                    </a>
-                  </li>
-                  <li>
-                    <a href="vision-mission.html">
-                      Vision & Mission
-                    </a>
-                  </li>
-                  <li>
-                    <a href="bod.html">
-                      Board of Directors
-                    </a>
-                  </li>
-                </ul>
-              </li>
-              <li>
-                <a href="businesses.html">
-                  Our Businesses
-                </a>
-              </li>
-              <li>
-                <a href="projects.html">
-                  Our Projects
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  CSR
-                </a>
-                <ul>
-                  <li>
-                    <a href="csr.html">
-                     CSR Program
-                    </a>
-                  </li>
-                  <li>
-                    <a href="csr-activities.html">
-                      CSR Activities
-                    </a>
-                  </li>
-                </ul>
-              </li>
-              <li>
-                <a href="gallery.html">
-                  Gallery
-                </a>
-              </li>
-              <li>
+            <li>
+              <a href="about.html">
+                Tentang Kami
+              </a>
+            </li>
+            <li>
+              <a href="businesses.html">
+                Bisnis Kami
+              </a>
+            </li>
+            <li>
+              <a href="projects.html">
+                Proyek Kami
+              </a>
+            </li>
+            <li>
+              <a href="csr.html">
+                CSR
+              </a>
+            </li>
+            <li>
+              <a href="gallery.html">
+                Galeri
+              </a>
+            </li>
+            <li>
+              <a href="career.html">
+                Karir
+              </a>
+            </li>
+            <li>
                 <a href="contact.html">
-                  Contact Us
+                  Kontak Kami
                 </a>
               </li> 
-            </ul>
+          </ul>
             <hr class="my-5">
             <div class="lang-ansaf">
               <ul>
@@ -183,9 +159,9 @@
     <div class="container-fluid career-brief">
       <div class="row">
         <div class="col-lg-12 px-lg-5">
-          <p class="text-white text-center w-75 py-lg-3 mx-auto">
-            Pintu kami selalu terbuka lebar bagi individu bertalenta yang bertanggung jawab untuk bergabung dengan tim kami.<br>
-            Kirimkan CV Anda ke <a class="text-orange" href="mailto:contact.ansaf@gmail.co.id">contact.ansaf@gmail.co.id</a> jika Anda tertarik untuk bergabung, tim kami akan segera<br>
+          <p class="text-white py-lg-3 mx-auto">
+            Pintu kami selalu terbuka lebar bagi individu bertalenta yang bertanggung jawab untuk bergabung dengan tim kami.
+            Kirimkan CV Anda ke <a class="text-orange" href="mailto:contact.ansaf@gmail.co.id">contact.ansaf@gmail.co.id</a> jika Anda tertarik untuk bergabung, tim kami akan segera
             menghubungi Anda kembali.
           </p>
         </div>
