--- a/career.html
+++ b/career.html
@@ -167,17 +167,17 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid bg-light-gray py-lg-5">
+    <div class="container-fluid bg-light-gray py-5">
       <div class="row py-lg-5">
-        <div class="col-lg-5 pl-lg-0">
-          <img class="w-100 img-fluid" src="images/career-img-content-03.jpg" alt=""/>
+        <div class="col-lg-5 pl-lg-0 p-4">
+          <img class="w-100 img-fluid px-lg-0 px-3" src="images/career-img-content-03.jpg" alt=""/>
         </div>
-        <div class="col-lg-6 offset-lg-1 pb-lg-5 pr-lg-5">
+        <div class="col-lg-6 offset-lg-1 pb-lg-5 pr-lg-5 px-5 pl-lg-3">
           <h5 class="text-orange">
             Accounting Supervisor
           </h5>
-            <strong class="font-weight-bold">Persyaratan :</strong>
-            <ul class="pl-3 font-roboto">
+            <strong class="font-weight-bold text-gray">Persyaratan :</strong>
+            <ul class="pl-3 font-roboto  text-gray">
               <li>
                 Mampu mengikuti perkembangan terbaru dalam teknologi dan perangkat lunak akuntansi
               </li>
@@ -191,8 +191,8 @@
                 Menunjukkan keterampilan analitis dan pemecahan masalah yang sangat baik
               </li>
             </ul>
-            <strong class="font-weight-bold">Tanggung Jawab :</strong>
-            <ul class="pl-3 font-roboto">
+            <strong class="font-weight-bold  text-gray">Tanggung Jawab :</strong>
+            <ul class="pl-3 font-roboto  text-gray">
               <li>
                 Memastikan bahwa semua operasi keuangan dan akuntansi dalam departemen akuntansi 
     berjalan lancar
@@ -210,39 +210,35 @@
         </div>
       </div>
       <div class="row py-lg-5">
-        <div class="pl-lg-5 col-lg-5 pb-lg-5">
+        <div class="pl-lg-5 col-lg-5 pb-lg-5 px-5 pl-lg-4">
           <h5 class="text-orange">
-            Accounting Supervisor
+            Production Analyst
           </h5>
-            <strong class="font-weight-bold">Persyaratan :</strong>
-            <ul class="pl-3 font-roboto">
+            <strong class="font-weight-bold  text-gray">Persyaratan :</strong>
+            <ul class="pl-3 font-roboto  text-gray">
               <li>
-                Mampu mengikuti perkembangan terbaru dalam teknologi dan perangkat lunak akuntansi
+                Memiliki kemampuan untuk mengambil inisiatif dan meninjau proses dan
               </li>
               <li>
-                Memproses sejumlah besar data numerik dan memiliki keterampilan kepemimpinan yang kuat
+                Memiliki keterampilan komputer tingkat lanjut yang relevan untuk manajemen data
               </li>
               <li>
-                Memiliki pengetahuan yang baik tentang prinsip dan praktik akuntansi
-              </li>
-              <li>
-                Menunjukkan keterampilan analitis dan pemecahan masalah yang sangat baik
+                Memiliki keterampilan interpersonal yang kuat untuk membangun dan memelihara hubungan kerja yang efektif
               </li>
             </ul>
-            <strong class="font-weight-bold">Tanggung Jawab :</strong>
-            <ul class="pl-3 font-roboto">
+            <strong class="font-weight-bold  text-gray">Tanggung Jawab :</strong>
+            <ul class="pl-3 font-roboto  text-gray">
               <li>
-                Memastikan bahwa semua operasi keuangan dan akuntansi dalam departemen akuntansi 
-    berjalan lancar
+                Memastikan proses produksi yang optimal dalam suatu organisasi
               </li>
               <li>
-                Merekrut dan melatih staf akuntansi
+                Merencanakan dan melaksanakan aliran produksi yang efisien dari barang hingga data
               </li>
               <li>
-                Mengawasi pekerjaan staf akuntansi junior
+                Memastikan bahwa jaminan kualitas yang tepat disediakan untuk produk atau data yang dihasilkan oleh perusahaan
               </li>
               <li>
-                Meninjau laporan keuangan untuk memastikan akurasi, dan merekonsiliasi akun buku besar
+                Memantau proses produksi yang sedang berlangsung, untuk mendokumentasikan perlambatan yang tidak terduga dan secara proaktif mengidentifikasi kemacetan baru
               </li>
             </ul>
         </div>
