--- a/career.html
+++ b/career.html
@@ -168,9 +168,9 @@
       </div>
     </div>
     <div class="container-fluid bg-light-gray py-5">
-      <div class="row py-lg-5">
+      <div class="row py-5">
         <div class="col-lg-5 pl-lg-0 p-4">
-          <img class="w-100 img-fluid px-lg-0 px-3" src="images/career-img-content-03.jpg" alt=""/>
+          <img class="w-100 img-fluid px-lg-0 px-3 mb-lg-0 mb-4" src="images/career-img-content-03.jpg" alt=""/>
         </div>
         <div class="col-lg-6 offset-lg-1 pb-lg-5 pr-lg-5 px-5 pl-lg-3">
           <h5 class="text-orange">
@@ -209,8 +209,8 @@
             </ul>
         </div>
       </div>
-      <div class="row py-lg-5">
-        <div class="pl-lg-5 col-lg-5 pb-lg-5 px-5 pl-lg-4">
+      <div class="row py-5">
+        <div class="pl-lg-5 col-lg-5 pb-lg-5 px-5 pl-lg-4 order-lg-1 order-2">
           <h5 class="text-orange">
             Production Analyst
           </h5>
@@ -242,19 +242,21 @@
               </li>
             </ul>
         </div>
-        <div class="col-lg-5  offset-lg-2 pr-lg-0">
-          <img class="w-100 img-fluid" src="images/career-img-content-04.jpg" alt=""/>
+        <div class="col-lg-5  offset-lg-2 px-5 pl-lg-4 pr-lg-0 order-lg-2 order-1">
+          <img class="w-100 img-fluid mb-lg-0 mb-4" src="images/career-img-content-04.jpg" alt=""/>
         </div>
       </div>
     </div>
-    <div class="container-fluid py-lg-5">
+    <div class="container-fluid bg-white footer-top py-5">
       <div class="row text-center mt-lg-5">
           <div class="col-lg-12">
               <h4 class="text-dark-blue pb-lg-4 d-none d-lg-block">
                 Memiliki Pertanyaan Terkait Karir Anda Bersama Kami?
               </h4>
               <h4 class="text-dark-blue pb-5 d-lg-none">
-                Memiliki Pertanyaan Terkait Karir Anda Bersama Kami?
+                Memiliki Pertanyaan<br>
+                Terkait Karir Anda<br>
+                Bersama Kami?
               </h4>
           </div>
       </div>
@@ -278,10 +280,10 @@
           <img class="img-fluid text-right logo" src="images/ansaf-logo.png" alt="">
       </div>
       <div class="col-lg-4 py-lg-0 py-4">
-          <p class="text-gray">
-              Kantor Taman E.3.3 Unit B5<br>
-              Jl. Dr. Ide Anak Agung Gde Agung, Kuningan Timur,<br>
-              Setiabudi, Jakarta Selatan 12950
+          <p class="text-gray alamat">
+            Kantor Taman E.3.3 Unit B5<br>
+            Jl. Dr. Ide Anak Agung Gde Agung, Kuningan Timur,
+            Setiabudi, Jakarta Selatan 12950
           </p>
       </div>
       <div class="col-lg-3 fax-column text-center">
