--- a/gallery.html
+++ b/gallery.html
@@ -149,7 +149,7 @@
             </div>
             <div class="inline-block pl-lg-4 pl-2">
                 <h2 class="text-dark-blue">
-                  Gallery
+                  Galeri
                 </h2>
             </div>
           </div>
