--- a/businesses.html
+++ b/businesses.html
@@ -173,7 +173,7 @@
             </div>
             <div class="inline-block pl-lg-4 pl-2">
                 <h2 class="text-dark-blue">
-                  Our Businesses
+                  Bisnis Kami
                 </h2>
             </div>
           </div>
