--- a/career.html
+++ b/career.html
@@ -161,7 +161,7 @@
         <div class="col-lg-12 px-lg-5">
           <p class="text-white py-lg-3 mx-auto">
             Pintu kami selalu terbuka lebar bagi individu bertalenta yang bertanggung jawab untuk bergabung dengan tim kami.
-            Kirimkan CV Anda ke <a class="text-orange" href="mailto:contact.ansaf@gmail.co.id">contact.ansaf@gmail.co.id</a> jika Anda tertarik untuk bergabung, tim kami akan segera
+            Kirimkan CV Anda ke <a class="text-orange" href="mailto:recruitment@pt-ansaf.co.id">recruitment@pt-ansaf.co.id</a> jika Anda tertarik untuk bergabung, tim kami akan segera
             menghubungi Anda kembali.
           </p>
         </div>
