--- a/index.html
+++ b/index.html
@@ -156,10 +156,8 @@
                                         through
                                         Partnership
                                     </h1>
-                                    <p class="text-white">
-                                        Ansaf sangat tepat menjadi<br>
-                                        mitra karena memberikan solusi<br>
-                                        yang dibutuhkan klien
+                                    <p class="text-white text-justify">
+                                        Ansaf sangat tepat menjadi mitra karena Kami tidak pernah melihat hambatan ataupun masalah, Kami hanya melihat situasi yang membutuhkan solusi.
                                     </p>
                                 </div>
                             </div>
